fix(style) align-items flex-start (#967)

--- a/projects/novo-elements/src/elements/chips/Chips.scss
+++ b/projects/novo-elements/src/elements/chips/Chips.scss
@@ -344,7 +344,7 @@ novo-row-chip {
       }
       span {
         color: inherit;
-        align-items: start;
+        align-items: flex-start;
         display: flex;
         overflow: hidden;
         text-overflow: ellipsis;
