--- a/projects/novo-elements/src/elements/toast/Toast.scss
+++ b/projects/novo-elements/src/elements/toast/Toast.scss
@@ -52,7 +52,7 @@ novo-toast.toast-container > .close-icon {
   justify-content: center;
   align-content: center;
   align-items: center;
-  align-self: start;
+  align-self: flex-start;
   cursor: pointer;
   i {
     display: flex;
